	Changes by NoSuck:
	- fix IT message length
	Fix problems reported by Ralf Hoffmann:
	- fix MMD3 instrument type sanity check
	- fix strictness of MOD pattern data tester
	- fix loading of XMLiTE XM modules
	- fix loading of ST modules with invalid names
	Fix problems reported by Lionel Debroux:
	- fix PTM loader issues
	- fix MED4 invalid sample load error
	- fix NNA and DCT/DCA issues
	Other changes:
	- fix double free in case of ADPCM sample load error
	- code refactoring and cleanup
	- accept WUZAMOD! Scream Tracker 2 modules

4.4.1 (20161012):
	Fix issues reported by Saga Musix:
	- fix MDL c5spd to preserve base periods
	- fix MDL sample decoder loop with corrupted data
	- fix MASI loader OPLH and PPAN subchunks parsing
	Other changes:
	- fix MacOS Tiger build issues (reported by Misty De Meo)
	- fix sample loop corner case (reported by knight-ryu12)
	- fix set pan effect in multichannel MODs (reported by Leilei)
	- fix global volume on module loop (reported by Travis Evans)
	- fix IT pan right value (by NoSuck)
	- fix MASI effects based on OpenMPT PSM loader
	- fix memory leak in XMs with 256 patterns
	- fix anticlick when rendering only one sample
	- fix anticlick in His Master's Noise instruments
	- fix anticlick in MED synth instruments

4.4.0 (20160719):
	Fix bugs caught in the OpenMPT test cases:
	- fix XM arpeggio in FastTracker 2 compatible mode
	- fix IT bidirectional loop sample length
	- fix MOD vibrato and tremolo in Protracker compatible mode
	Fix multichannel MOD issues reported by Leilei:
	- fix XM replayer note delay and retrig quirk
	- fix XM replayer channel pan
	- fix MOD loader period to note conversion
	Fix issues reported by Lionel Debroux:
	- fix virtual channel deallocation error handling
	- fix S3M global volume effect
	- fix IT envelope reset on tone portamento
	- fix IT voice leak caused by disabled envelope
	- fix IT volume column tone portamento
	- fix XM envelope position setting